"taking break for a while"

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -181,8 +181,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "38f84975",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdown\n",
+    "url=\"https://drive.google.com/file/d/1DFBOk3-dOz4uC-6fbpZDGB9jysTNNDdr/view?usp=sharing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7c7cfec3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1DFBOk3-dOz4uC-6fbpZDGB9jysTNNDdr\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "file_id = url.split(\"/\")[-2]\n",
+    "print(file_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ae44e48c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1DFBOk3-dOz4uC-6fbpZDGB9jysTNNDdr\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1DFBOk3-dOz4uC-6fbpZDGB9jysTNNDdr&confirm=t&uuid=78cdab30-860d-4c6e-85af-a3dba99cb294\n",
+      "To: e:\\ml_end to end project\\END-to-END-Chest-Cancer\\research\\Chest-CT-Scan-data.zip\n",
+      "100%|██████████| 49.0M/49.0M [00:15<00:00, 3.08MB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Chest-CT-Scan-data.zip'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix = 'https://drive.google.com/uc?/export=download&id='\n",
+    "\n",
+    "gdown.download(prefix+file_id,\"Chest-CT-Scan-data.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c6bcf45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "180ee007",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11889559",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baad7645",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "667d0ad5",
    "metadata": {},
    "outputs": [],
    "source": []
